<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_Grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:text=""
        android:gravity="end|bottom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSeven"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEight"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnNine"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDivide"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFour"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnFive"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSix"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnMultiply"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Multiply"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnOne"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnTwo"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnThree"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnSubtract"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Subtract"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnDot"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDecimalPoint"
            android:text="@string/Dot"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnZero"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />



        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnCLR"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/_CLR"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnAdd"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/Plus"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnEqual"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:text="@string/_Equal"
            android:textSize="25sp"
            tools:ignore="UsingOnClickInXml" />






    </LinearLayout>

</LinearLayout>